# cvutils

./: .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  README.md  cvutils-config.cmake.in
cmake/Modules/: FindRapidJSON.cmake
featureComputation/: CMakeLists.txt  featureDetector.cpp  featureDetector.h  main.cpp
featureDetector/: CMakeLists.txt  featureDetector.cpp  featureDetector.h  main.cpp  orb.yml  sift.yml  sift_high.yml  surf.yml
featureMatcher/: CMakeLists.txt  extract_pairs.cpp  featureMatcher.cpp  featureMatcher.h  main.cpp
featureMatchesViewer/: CMakeLists.txt  README.md  document.cpp  document.hpp  mainframe.cpp  mainwindow.cpp  mainwindow.h  matchingpairgraphicsview.cpp  pairgraphicsitem.cpp
featureMatching/: CMakeLists.txt
featureViewer/: CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.h
fts/: frame0-desc.yml  frame2-desc.yml  frame4-desc.yml  frame5-desc.yml  frame5-feat.yml  matches-putative.yml
fts2Orb/: frame1-desc.yml  frame1-feat.yml  frame2-desc.yml  frame2-feat.yml  frame3-desc.yml  frame3-feat.yml  frame4-desc.yml  frame4-feat.yml  matches-geometric.yml  matches-putative.yml
fts2Sift/: frame1-desc.yml  frame1-feat.yml  frame2-desc.yml  frame2-feat.yml  frame3-feat.yml  frame4-desc.yml  frame4-feat.yml  matches-geometric.yml  matches-putative.yml
ftsOrb/: frame0-feat.yml  frame1-desc.yml  frame1-feat.yml  frame2-feat.yml  frame3-desc.yml  frame3-feat.yml  frame4-feat.yml  matches-geometric.yml
libs/: .gdb_history  CMakeLists.txt
libs/libcxxopts/: CMakeLists.txt
libs/libio/: CMakeLists.txt
libs/libio/include/cache/: abstractCache.h  cacheFactory.h  hash.h  lruCache.h  nonCache.h  simpleCache.h
libs/libio/include/fetch/: abstractFetcher.h  descriptorFetcher.h  featureFetcher.h  imageFetcher.h  matchesFetcher.h
libs/libio/include/io/: config.h  descriptorReader.h  descriptorWriter.h  featureReader.h  featureWriter.h  geometricType.h  imageReader.h  matchType.h  matchesReader.h  matchesWriter.h
libs/libio/old/: io.cpp  io.h
libs/libio/src/: config.cpp  descriptorReader.cpp  descriptorWriter.cpp  featureReader.cpp  featureWriter.cpp  imageReader.cpp  matchesReader.cpp  matchesWriter.cpp
libs/libiso/: CMakeLists.txt
libs/libiso/include/transformation/: isometry.h
libs/libiso/src/: isometry.cpp  ransac.cpp
libs/libqimgcv/: CMakeLists.txt
libs/libqimgcv/include/qimgcv/: qImgCv.h
libs/libqimgcv/src/: qImgCv.cpp
libs/libtqdm/: CMakeLists.txt
libs/libzoom/: CMakeLists.txt
libs/libzoom/include/zoom/: qGraphicsZoom.h
libs/libzoom/src/: qGraphicsZoom.cpp
matchesViewer/: CMakeLists.txt  document.cpp  document.hpp  main.cpp  mainwindow.cpp  mainwindow.h  matchingpairgraphicsview.cpp
misc/: io.cpp  io.h  main.cpp  qGraphicsZoom.h
misc/cache/: abstractCache.h  lruCache.h  simpleCache.h
misc/fetch/: abstractFetcher.h  imageFetcher.h
misc/io/: imageReader.cpp  imageReader.h  io.cpp  io.h
misc/qimgcv/: qImgCv.cpp
misc/zoom/: qGraphicsZoom.cpp
